[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/png-transparent-star-fox-64-3d-lylat-wars-star-fox-2-star-fox-assault-pregnancy-star-fox-angle-nintendo-video-game(1)(1).png" type="Texture" id=1]
[ext_resource path="res://UI/Health.png" type="Texture" id=2]
[ext_resource path="res://UI/0_Rings.png" type="Texture" id=3]
[ext_resource path="res://UI/1_Rings.png" type="Texture" id=4]
[ext_resource path="res://UI/2_Rings.png" type="Texture" id=5]
[ext_resource path="res://UI/3_Rings.png" type="Texture" id=6]
[ext_resource path="res://GUI.gd" type="Script" id=7]
[ext_resource path="res://UI/png-clipart-star-fox-assault-star-fox-64-star-fox-2-computer-icons-test-prep-rally-nintendo-logo.png" type="Texture" id=8]
[ext_resource path="res://UI/Health33.png" type="Texture" id=9]
[ext_resource path="res://UI/Health66.png" type="Texture" id=10]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 1775.57
margin_top = 50.0
margin_right = 1775.57
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
margin_left = -143.819
margin_top = -2.96959
margin_right = -43.8186
margin_bottom = 53.0304
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/TextureRect"]
margin_left = 108.69
margin_top = 12.4726
margin_right = 148.69
margin_bottom = 26.4726
rect_scale = Vector2( 2.5, 2.5 )
text = "X"

[node name="Health100" type="TextureRect" parent="Control/Panel"]
margin_left = -1717.61
margin_top = -15.6016
margin_right = -1329.61
margin_bottom = 92.3984
rect_scale = Vector2( 1.282, 1.178 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health66" type="TextureRect" parent="Control/Panel"]
margin_left = -1717.61
margin_top = -15.6016
margin_right = -1329.61
margin_bottom = 92.3984
rect_scale = Vector2( 1.282, 1.178 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health33" type="TextureRect" parent="Control/Panel"]
margin_left = -1717.61
margin_top = -15.6016
margin_right = -1329.61
margin_bottom = 92.3984
rect_scale = Vector2( 1.282, 1.178 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control/Panel"]
margin_left = -106.322
margin_top = 60.4079
margin_right = 114.678
margin_bottom = 298.408
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0.2, 0 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/TextureRect3"]
margin_left = 488.915
margin_top = 43.8854
margin_right = 528.915
margin_bottom = 57.8854
rect_scale = Vector2( 12, 12 )
rect_pivot_offset = Vector2( 12, 0 )
text = "X"

[node name="Rings_0" type="TextureRect" parent="Control/Panel"]
margin_left = -1369.92
margin_top = 87.5894
margin_right = -451.916
margin_bottom = 423.589
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0.25, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rings_1" type="TextureRect" parent="Control/Panel"]
visible = false
margin_left = -1369.92
margin_top = 87.5894
margin_right = -451.916
margin_bottom = 423.589
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0.25, 0 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rings_2" type="TextureRect" parent="Control/Panel"]
visible = false
margin_left = -1369.92
margin_top = 87.5894
margin_right = -451.916
margin_bottom = 423.589
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0.25, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rings_3" type="TextureRect" parent="Control/Panel"]
visible = false
margin_left = -1369.92
margin_top = 87.5894
margin_right = -451.916
margin_bottom = 423.589
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0.25, 0 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RingsTotal" type="Label" parent="Control/Panel"]
margin_left = -1583.23
margin_top = 95.2049
margin_right = -1543.23
margin_bottom = 109.205
rect_scale = Vector2( 7, 7 )
custom_colors/font_color = Color( 0.419608, 0.945098, 0.858824, 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WingsTotal" type="Label" parent="Control/Panel"]
margin_left = -5.52966
margin_top = 3.33711
margin_right = 34.4703
margin_bottom = 17.3371
rect_scale = Vector2( 3, 3 )

[node name="BombsTotal" type="Label" parent="Control/Panel"]
margin_left = 2.02991
margin_top = 62.5534
margin_right = 42.0299
margin_bottom = 76.5534
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 3, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
